# carina

./: .coveragerc  .gitlab-ci.yml  .mypy.ini  Dockerfile  Pipfile  README.md  alembic.ini  asgi.py  pyproject.toml  renovate.json  style.sh  test_script.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  test.yaml
alembic/: env.py
alembic/versions/: 15d687a1f3f2_voucher_file_log_table.py  16d946584f48_retailer_and_fetch_type_tables.py  180b545375b0_voucher_and_voucher_retailer_tables.py  240181573092_add_cleanup_handler_path.py  2b2007c73ab0_add_reason_task_param_to_reward_issuance.py  2c286f5fe73a_remove_old_retry_tables.py  32d186786bc0_voucher_table_unique_contraint.py  35b969f1e965_generic_queue_tables.py  4282380cb010_cancel_vouchers_task_type.py  43bdcbcd05d5_add_foreign_key_constraint_constraint_.py  43ce4505d013_add_pending_reward_id_to_reward_issuance.py  44b065b868a4_add_reward_campaign_table.py  4731e2ed8bac_retry_tasks_lib_1_7_0.py  480f9bc0e2df_voucher_and_voucher_retailer_tables.py  4b578db4a19b_set_campaign_slug_max_length.py  4f5e04911e0a_add_task_type_key.py  605e6656b0b4_set_campaign_slug_max_length_again.py  629d5ac2463f_add_fetch_type_path_and_create_jigsaw.py  629d5ac2463f_v1_release_squashed_init.py  6395a5cbb0c8_voucher_allocation.py  64dadbdcd039_rename_voucher_type_slug_to_reward_slug.py  68cf212e6eeb_update_task_type_name_from_voucher_.py  69cc1d0099e4_rename_voucher_tables_to_reward.py  6ee302570436_voucher_and_voucher_retailer_tables.py  6ee302570436_voucher_table.py  76d499217f16_change_issue_reward_error_handler.py  87bb66a9e24a_voucher_allocation.py  8b8f036e34ef_voucher_config_status.py  8f879d830ac9_issuance_task_error_handler.py  90d8283d0add_added_queued_retry_status_waiting.py  91b1930ae6aa_delete_unallocated_vouchers_task_type.py  94cfb5b593f3_validity_days_nullable.py  9589c7115a36_alter_unique_constraint_for_vouchers.py  9700bdae4ee7_voucher_import_table.py  9812a07aad99_rename_enumeration_from_.py  9980df342054_merge_workers.py  a757c187a9aa_voucher_update_table_voucher_deleted.py  ab2a70f485d9_retailer_slug_issuance_task_key.py  adbed3358eaf_retry_tables_constraints.py  ae77166b799f_init_voucher_config_table.py  (+16 more)
app/: __init__.py  enums.py  scheduler.py
app/activity_utils/: enums.py  tasks.py
app/api/: api.py  deps.py  healthz.py  tasks.py
app/api/endpoints/: reward.py  voucher.py
app/core/: cli.py  config.py  exception_handlers.py  middleware.py  reporting.py  utils.py
app/crud/: __init__.py  retailer.py  reward.py  voucher.py
app/db/: base_class.py  session.py
app/enums/: __init__.py
app/fetch_reward/: __init__.py  base.py  jigsaw.py  pre_loaded.py
app/fetch_voucher/: __init__.py  pre_loaded.py
app/imports/agents/: file_agent.py
app/models/: __init__.py  retailer.py  reward.py  tasks.py  voucher.py
app/prometheus/: __init__.py  endpoints.py  manager.py
app/retry_task_utils/: __init__.py  asynchronous.py  error_handler.py  synchronous.py
app/scheduled_tasks/: scheduler.py
app/schemas/: __init__.py  reward.py  voucher.py
app/tasks/: __init__.py  allocation.py  error_handlers.py  issuance.py  prometheus.py  reward_cancellation.py  reward_deletion.py  status_adjustment.py  voucher.py  voucher_cancellation.py  voucher_deletion.py  worker.py
carina/: __init__.py  enums.py
carina/activity_utils/: enums.py  schemas.py  tasks.py
carina/alembic/: env.py
carina/alembic/versions/: 240181573092_add_cleanup_handler_path.py  2b5f2e762b35_agent_params_task_type_key.py  43ce4505d013_add_pending_reward_id_to_reward_issuance.py  4b578db4a19b_set_campaign_slug_max_length.py  4c2e02b5bc03_add_retry_task_status_index.py  629d5ac2463f_v1_release_squashed_init.py  79f2450fae5e_cleanup_cancel_and_delete_rewards_tasks.py  e763e2378670_add_deleted_reward_type_status.py  ed227f6cc7e1_retailer_status.py  f0562d068211_add_reward_file_log_to_reward_table.py  f24aca10cfd7_db_module_paths.py
carina/api/: api.py  deps.py  healthz.py  tasks.py
carina/api/endpoints/: reward.py
carina/core/: cli.py  config.py  exception_handlers.py  key_vault.py  reporting.py
carina/crud/: retailer.py  reward.py
carina/db/: base.py  base_class.py  session.py
carina/fetch_reward/: __init__.py  base.py  jigsaw.py  pre_loaded.py
carina/imports/agents/: file_agent.py
carina/models/: __init__.py  retailer.py  reward.py
carina/scheduled_tasks/: scheduler.py  task_cleanup.py
carina/schemas/: __init__.py  reward.py
carina/tasks/: __init__.py  cleanup_handlers.py  error_handlers.py  issuance.py  prometheus.py  reward_cancellation.py  reward_deletion.py  shared_crud.py  status_adjustment.py
local/: local.env.example
tests/: conftest.py  fixtures.py
tests/api/: conftest.py  test_exception_handlers.py  test_healthz.py  test_rewards.py  test_vouchers.py
tests/functional/: conftest.py  test_fetch_reward.py  test_fetch_reward_jigsaw.py  test_fetch_reward_pre_loaded.py  test_reward_import_and_updates.py  test_scheduled_tasks.py  test_schemas.py  test_task_error_handlers.py  test_tasks.py  test_voucher_import_and_updates.py
tests/functional/fetch_reward_jigsaw/: __init__.py  conftest.py  test_cleanup_reward.py  test_get_token_paths.py  test_register_paths.py  test_reversal_paths.py  test_success_paths.py
tests/unit/: conftest.py  test_leader_election.py  test_metrics.py  test_scheduler.py  test_tasks.py  test_voucher_import_and_updates.py  test_voucher_updates.py
tests/unit/activity/: test_enum.py
